@@ -1,5 +1,13 @@
 2019-10-18  Tom Tromey  <tom@tromey.com>
 
+	* gdbsupport/thread-pool.c (thread_pool::set_thread_count): Set
+	name of worker thread.
+	* gdbsupport/common.m4 (GDB_AC_COMMON): Check for
+	pthread_setname_np.
+	* configure, config.in: Rebuild.
+
+2019-10-18  Tom Tromey  <tom@tromey.com>
+
 	* python/python.c (class gdbpy_gil): New.
 	(struct gdbpy_event): Add constructor, destructor, operator().
 	(gdbpy_post_event): Use run_on_main_thread.
